Fixed top menu buttons on frontned not working on smaller screens
Fix #179
Make sure the top navigation bar is above all page elements

--- a/src/templates/assets/css/upstream.css
+++ b/src/templates/assets/css/upstream.css
@@ -206,3 +206,7 @@ table.dataTable tr.child td.child {
   -webkit-box-shadow: 0 0 3px rgba(0,115,170,.8);
   box-shadow: 0 0 3px rgba(0,115,170,.8);
 }
+
+.top_nav .nav_menu {
+  z-index: 999;
+}
